meja/tests/pattern_or-fail.stderr
File "tests/pattern_or-fail.meja", line 1, characters 5-10:
Error: Variable x must occur on both sides of this '|' pattern.
