meja/tests/pattern_or-fail.meja
let (x | _) = 15;
